Added CSRF protection

--- a/views/index.html
+++ b/views/index.html
@@ -8,7 +8,7 @@
     <div class="queja">
         <p class="body">{{complain.body}}</p>
         <p>{{ dateFormat(complain.date) }}</p>
-        <img alt="Queja sin imágen" src="{{ complain.files }}" />
+        <img src="{{ complain.files }}" />
     </div>
 </article>
 {% else %}
