--- a/static/styles.css
+++ b/static/styles.css
@@ -20,6 +20,7 @@ h2 {
     border: #252627 solid;
     border-width: 1px;
     padding: 10px;
+    margin: 5px;
     border-radius: 10px;
     box-sizing: border-box;
     display: flex;
