--- a/views/newuser.html
+++ b/views/newuser.html
@@ -2,7 +2,8 @@
 
 {% block article %}
 
-<form action="/newuser" method="POST" enctype="multipart/form-data">
+<form action="/newuser" method="POST">
+    <input name="csrf_token" type="hidden" value="{{csrf_token}}"/>
     <label for="username">Nuevo usuario:</label>
     <input class="input" type="text" name="username" />
     <label for="password">Nueva contraseña:</label>
